examples/test/testpolicy19860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19860
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key21: value4
      key5: value17
      key7: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value25
          key49: value44
      podSelector:
        matchLabels:
          key15: value35
          key9: value3
          key22: value13
